# alpakka_firmware

./: CMakeLists.txt  Makefile  readme.md
.github/workflows/: build.yml
docs/: button_logic.md  ctrl_protocol.md
scripts/: esp_flasher_patch.py  install.sh  load.sh  session.sh
src/: bus.c  button.c  common.c  config.c  ctrl.c  dhat.c  esp.c  gyro.c  hid.c  imu.c  led.c  logging.c  loop.c  main.c  power.c  profile.c  self_test.c  thanks.c  thumbstick.c  touch.c  tusb_config.c  uart.c  webusb.c  wireless.c
src/headers/: bus.h  button.h  common.h  config.h  ctrl.h  esp.h  gyro.h  hid.h  imu.h  led.h  logging.h  loop.h  pin.h  power.h  profile.h  thanks.h  thumbstick.h  touch.h  tusb_config.h  uart.h  webusb.h  wireless.h  xinput.h
src/profiles/: console.c  console_legacy.c  custom.c  desktop.c  flight.c  fps_fusion.c  fps_wasd.c  home.c  racing.c  rts.c
